force-app/main/default/objects/TimeSlice__c/TimeSlice__c.object-meta.xml
<CustomObject>
    <label>Time Slice</label>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Time Slice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>