force-app/main/default/objects/TimeSlice__c/fields/NumberOfMinutes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMinutes__c</fullName>
    <label>Num Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>