force-app/main/default/objects/TimeSlice__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>