force-app/main/default/objects/TimeSlice__c/fields/TimeEntry__c.field-meta.xml
<CustomField>
    <fullName>TimeEntry__c</fullName>
    <label>Time Entry</label>
    <referenceTo>TimeEntry__c</referenceTo>
    <relationshipLabel>Time Slices</relationshipLabel>
    <relationshipName>TimeSlices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>